# roundnet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKER.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  NEW_README.md  README.md  REFACTORING_SUMMARY.md  demo.py  docker-compose.yml  docker.sh  pyproject.toml  setup.sh
data/: README.md  games.json  partnerships.json  players.json  playing_days.json
demo_data/: games.json  partnerships.json  players.json  playing_days.json
scripts/: rebuild_partnerships.py
src/roundnet/: __init__.py  main.py
src/roundnet/components/: charts.py  forms.py  forms_new.py  new_forms.py  sidebar.py
src/roundnet/config/: settings.py
src/roundnet/data/: __init__.py  file_manager.py  loader.py  loader_new.py  loader_old.py  manager.py  models.py  new_loader.py  processor.py  team_generator.py
src/roundnet/utils/: helpers.py
tests/: conftest.py  test_charts.py  test_main.py  test_manager_extended.py  test_processor.py  test_processor_replacement.py  test_simple_coverage.py  test_team_generator.py  test_utils.py
tests/data/: test_loader.py  test_processor.py
